# python-lightweight-archipelago

./: .gitignore  README.md  main.py  manager.py  pyproject.toml
.github/workflows/: publish_package.yml
client/: __init__.py  games.py
client/packets/: __init__.py  server.py
client/packets/core/: __init__.py  enums.py
data/: core.py  data_enums.py
data/packets/: __init__.py  client.py  server.py
packets/: __init__.py  client.py  server.py
packets/core/: __init__.py  enums.py
src/archipelago_lite_client/: __init__.py  games.py  manager.py
src/archipelago_lite_client/packets/: __init__.py  client.py  server.py
src/archipelago_lite_client/packets/core/: __init__.py  enums.py
