[project]
name = "archipelago-lite-client"
version = "0.1.0"
description = "A simple client lightweight client for the Archipelago protocol"
readme = "README.md"
authors = [
    { name = "JeyKey09"},
    { name = "Molnes" }
]
requires-python = ">=3.12"
dependencies = [
    "websockets>=14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
